Adding backfilling of GSI records available under query parameter
