# controller/v2.js
@@ -20,7 +20,8 @@ router.get('/hotel-status', combinedAuthMiddleware, (req, resp) => {
     if (!req.query || !req.query.hkeys) return resp.status(500).json({ error: 'Missing hkeys' })
     const hkeys = req.query.hkeys.split(',').map((val) => Number(val))
     
-    storage.getHotelStatusByHkeys(hkeys, {green: true, clean: true} ,false, true).then(statuses => {
+    console.log((req.query.backfill == "true"))
+    storage.getHotelStatusByHkeys(hkeys, {green: true, clean: true}, false, true, ("true" == req.query.backfill)).then(statuses => {
         resp.send(statuses)
     }).catch((err) => {
         console.log(err)
